labs/sections/programming-with-python/day-075-static-typing-with-mypy/expected-output/sample-run.txt
$ python3 -m pytest starter/test_catalog.py
........                                                                 [100%]
8 passed in 0.00s
(exit 0)

$ python3 -m mypy starter/catalog.py
starter/catalog.py:63: error: Item "None" of "Model | None" has no attribute "name"  [union-attr]
starter/catalog.py:63: error: Item "None" of "Model | None" has no attribute "context_tokens"  [union-attr]
starter/catalog.py:85: error: Argument 2 to "estimate_cost" has incompatible type "float"; expected "int"  [arg-type]
Found 3 errors in 1 file (checked 1 source file)
(exit 1)

$ python3 -m mypy --strict starter/catalog.py
starter/catalog.py:63: error: Item "None" of "Model | None" has no attribute "name"  [union-attr]
starter/catalog.py:63: error: Item "None" of "Model | None" has no attribute "context_tokens"  [union-attr]
starter/catalog.py:85: error: Argument 2 to "estimate_cost" has incompatible type "float"; expected "int"  [arg-type]
starter/catalog.py:88: error: Function is missing a type annotation  [no-untyped-def]
starter/catalog.py:103: error: Call to untyped function "format_price" in typed context  [no-untyped-call]
starter/catalog.py:117: error: Returning Any from function declared to return "dict[str, float]"  [no-any-return]
Found 6 errors in 1 file (checked 1 source file)
(exit 1)

$ python3 -m mypy starter/untyped_first_run.py
Success: no issues found in 1 source file
(exit 0)

$ python3 -m mypy --strict starter/untyped_first_run.py
starter/untyped_first_run.py:25: error: Function is missing a type annotation  [no-untyped-def]
starter/untyped_first_run.py:33: error: Function is missing a type annotation  [no-untyped-def]
starter/untyped_first_run.py:37: error: Function is missing a return type annotation  [no-untyped-def]
starter/untyped_first_run.py:37: note: Use "-> None" if function does not return a value
starter/untyped_first_run.py:38: error: Call to untyped function "load_prices" in typed context  [no-untyped-call]
starter/untyped_first_run.py:39: error: Call to untyped function "total" in typed context  [no-untyped-call]
starter/untyped_first_run.py:43: error: Call to untyped function "main" in typed context  [no-untyped-call]
Found 6 errors in 1 file (checked 1 source file)
(exit 1)

$ python3 -m mypy starter/any_demo.py
starter/any_demo.py:46: error: Item "None" of "str | None" has no attribute "upper"  [union-attr]
Found 1 error in 1 file (checked 1 source file)
(exit 1)

$ python3 -m mypy --strict examples/catalog.py examples/typing_tour.py
Success: no issues found in 2 source files
(exit 0)

$ python3 -m mypy --config-file examples/pyproject.toml examples/catalog.py
Success: no issues found in 1 source file
(exit 0)

$ python3 -m pytest examples/test_catalog.py
.........                                                                [100%]
9 passed in 0.00s
(exit 0)

$ python3 examples/demo.py
1. The lookup that can fail
---------------------------
find_model('small'):    Model(name='small', context_tokens=8000, price_per_million_input=0.25)
find_model('enormous'): None

2. describe() — the function the tests never asked about
--------------------------------------------------------
describe('small'):    small: 8,000 token context
describe('large'):    large: 200,000 token context
describe('enormous'): enormous: unknown model
  ^ the buggy version raised AttributeError on that last line

3. split_cost() — an int really is an int now
---------------------------------------------
split_cost('medium', 1000000, 2): 1.5
split_cost('medium', 1000000, 3): 0.999999
  ^ 1000000 // 3 is 333333 tokens; 1000000 / 3 would have been 333333.33...

4. price_line() — an annotated helper, callable under strict
------------------------------------------------------------
  small: $0.25 per million tokens
  medium: $3.00 per million tokens
  large: $15.00 per million tokens
  enormous: unknown model

5. load_settings() — checked at the boundary, not merely annotated
------------------------------------------------------------------
  max_output_tokens = 1024.0
  temperature = 0.2
  top_p = 0.95
  every value is a real float, because the loader converted it

$ python3 examples/typing_tour.py
mean of arithmetic: 0.9000
best suite: arithmetic at 0.9000
first_word(None): (nothing)
first_word('  '): (blank)
first_word('hello there'): hello
parse_port('8080'): 8080
token_count('a b c'): 3
token_count(['a b', 'c']): 3
search_label('keyword'): search mode: keyword
pass_rate: 0.7000
MAX_RETRIES: 3
user=u-1 session=s-9
first_or([], 'fallback'): fallback
first_or([4, 5], 0): 4
[1234.5] structural typing works
config_name: production
